--- a/minggu3/acara_15/app/src/main/res/layout/activity_card_layout.xml
+++ b/minggu3/acara_15/app/src/main/res/layout/activity_card_layout.xml
@@ -1,30 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:card_view="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    card_view:cardCornerRadius="10dp"
-    card_view:cardElevation="3dp"
-    card_view:cardUseCompatPadding="true">
+    app:cardCornerRadius="6dp"
+    app:cardElevation="3dp"
+    app:cardUseCompatPadding="true">
+
     <LinearLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="5dp"
         android:orientation="vertical"
-        android:padding="5dp">
+        android:padding="5dp"
+        android:layout_margin="5dp">
+
         <TextView
             android:id="@+id/txt_nama_mahasiswa"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
+
         <TextView
             android:id="@+id/txt_npm_mahasiswa"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
+
         <TextView
             android:id="@+id/txt_Nohp_mahasiswa"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
+
+
     </LinearLayout>
 
 </androidx.cardview.widget.CardView>
